WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193778
Fix leak of AVSampleBufferRenderSynchronizer boundaryObserver object.
https://bugs.webkit.org/show_bug.cgi?id=193778
Summary
Fix leak of AVSampleBufferRenderSynchronizer boundaryObserver object.
Jer Noble
Reported
2019-01-24 13:47:30 PST
Fix leak of AVSampleBufferRenderSynchronizer boundaryObserver object.
Attachments
Patch
(1.82 KB, patch)
2019-01-24 13:49 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-01-24 13:48:05 PST
<
rdar://46720134
>
Jer Noble
Comment 2
2019-01-24 13:49:10 PST
Created
attachment 360033
[details]
Patch
WebKit Commit Bot
Comment 3
2019-01-24 15:16:01 PST
Comment on
attachment 360033
[details]
Patch Clearing flags on attachment: 360033 Committed
r240451
: <
https://trac.webkit.org/changeset/240451
>
WebKit Commit Bot
Comment 4
2019-01-24 15:16:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug