Cherry-pick r240451. rdar://problem/47586844

Fix leak of AVSampleBufferRenderSynchronizer boundaryObserver object.
    https://bugs.webkit.org/show_bug.cgi?id=193778

    Reviewed by Jon Lee.

    * platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::performTaskAtMediaTime):

    Canonical link: https://commits.webkit.org/208295@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240451 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.147@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@240566 268f45cc-cd09-0410-ab3c-d52691b4dbfc